[package]
name = "snake-rs"
version = "0.0.0"
description = "A snake game played in the console and written in Rust"
repository = "https://github.com/fvilers/snake-rs"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27"
rand = "0.8"

[[bin]]
name = "snake"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
